# pipeline

./: .gitignore  .pre-commit-config.yaml  .yamlfmt  Makefile  README.md  common.mk  pipeline.code-workspace  ruff.toml
croissant/: Dockerfile  README.md  pre-commit.githook  pyproject.toml  test.jsonld
croissant/.github/workflows/: lint.yml  test.yml
croissant/notebooks/: curation.ipynb  update_distribution.ipynb  update_evidence_filesets.ipynb
croissant/src/: app.py  cli.py
croissant/src/ot_croissant/: __init__.py  constants.py  curation.py  example.py  models.py
croissant/src/ot_croissant/assets/: distribution.json  instance.json  recordset.json
croissant/src/ot_croissant/crumbs/: __init__.py  distribution.py  metadata.py  record_sets.py
croissant/src/ot_croissant/curation/: distribution.json
croissant/test_data/record_set/: .part-00000-662724b9-2bc2-4b42-9377-5fdad7e3c899-c000.snappy.parquet.crc  part-00000-662724b9-2bc2-4b42-9377-5fdad7e3c899-c000.snappy.parquet
croissant/tests/: test_recordset_curation.py
orchestration/: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.local.yaml  compose.yaml  docker-compose.yaml  pyproject.toml  setup-dev.sh  yamlfmt.yml
orchestration/.github/workflows/: artifact.yaml  pr.yaml  push_config.yaml
orchestration/deployment/: .terraform.lock.hcl  main.tf  start.sh  startup_machine.sh  startup_user.sh  tunnel.sh
orchestration/docs/: README.md
orchestration/docs/batch/: README.md
orchestration/docs/containerization/: README.md
orchestration/docs/credible_set_qc/: README.md
orchestration/docs/datasources/decode_data/: README.md
orchestration/docs/datasources/eqtl_catalogue_data/: README.md
orchestration/docs/datasources/finngen_data/: README.md
orchestration/docs/datasources/finngen_meta_data/: README.md
orchestration/docs/datasources/gnomad_data/: README.md
orchestration/docs/datasources/gwas_catalog_data/: README.md  gentropy_heritability_estimate  gwas_catalog_heritability_estimate
orchestration/docs/datasources/interval_data/: README.md
orchestration/docs/datasources/ukb_ppp_eur_data/: README.md
orchestration/docs/secrets/: README.md
orchestration/docs/unified_pipeline/: README.md  config.md  dag.md
orchestration/docs/vep/: README.md
orchestration/images/gentropy/: Dockerfile
orchestration/images/gentropy/scripts/: harmonise-sumstats.sh
orchestration/src/orchestration/: .airflowignore  conftest.py  dynamic_dags.py  types.py
orchestration/src/orchestration/assets/: annotate_transcripts.sh  annotate_variants.sh  cli.py  cli_gentrypy.py  dataproc_pts_run.py  harmonise.sh  install_dependencies_on_cluster.sh  install_gentrypy_cli_on_cluster.sh  install_l2g_on_cluster.sh  l2g_predict.sh  susie_finemap.sh
orchestration/src/orchestration/dags/: credible_set_qc.py  decode_ingestion.py  eqtl_catalogue_ingestion.py  finngen_ingestion.py  finngen_ukb_meta.py  finngen_ukb_meta_harmonisation.py  finngen_ukb_mvp_meta.py  foldx_ingestion.py  genetics_etl.py  gnomad_ingestion.py  gwas_catalog_harmonisation.py  gwas_catalog_heritability_estimate.py  gwas_catalog_sumstats_pics.py  gwas_catalog_sumstats_susie_clumping.py  gwas_catalog_sumstats_susie_finemapping.py  gwas_catalog_top_hits.py  gwas_curation_update.py  lof_curation_ingestion.py  ukb_ppp_eur_finemapping.py  ukb_ppp_eur_harmonisation.py  unified_pipeline.py
orchestration/src/orchestration/models/: pts_step.py  run_config.py  secret.py  step.py
orchestration/src/orchestration/operators/: dataproc.py  diff.py  gce.py  gcs.py  manifest_operators.py  unified_pipeline.py
orchestration/src/orchestration/utils/: __init__.py  batch.py  common.py  dataproc.py  labels.py  manifest.py  path.py  utils.py
orchestration/src/ot_orchestration/dags/: credible_set_qc.py  foldx_ingestion.py  genetics_etl.py  gnomad_ingestion.py  gwas_catalog_harmonisation.py  gwas_catalog_sumstats_susie_clumping.py  gwas_catalog_sumstats_susie_finemapping.py  lof_curation_ingestion.py  ukb_ppp_eur_finemapping.py  ukb_ppp_eur_harmonisation.py  unified_pipeline.py
orchestration/src/ot_orchestration/operators/: dataproc.py  gce.py  gcs.py  unified_pipeline.py
orchestration/src/ot_orchestration/utils/: __init__.py  batch.py  common.py  dataproc.py  labels.py  utils.py
orchestration/tests/: conftest.py  test_batch_collect_operator.py  test_dag_validation.py  test_dataproc.py  test_harmonisation_manifest_generator.py  test_heritability_manifest_generator.py  test_io_manager.py  test_jar_staging.py  test_manifest_artifact_differ.py  test_run_config.py  test_runnable.py  test_secret.py  test_utils.py  test_vep_path_manager.py
orchestration/tests/integration_env_setup/: setup_test_env_three_way.sh  setup_test_env_two_way.sh
pis/: .dockerignore  Dockerfile  README.md  config.yaml  pyproject.toml
pis/src/pis/tasks/: crawl_encode.py  crispr_brain.py  (+5 more)
pts/: .test_durations  Dockerfile  README.md  config.yaml  pyproject.toml
pts/test/: test_aact_synonyms.py  test_chembl_molecule.py  test_clinical_report.py  test_drug_molecule.py  test_openfda.py  test_search.py
pts/tests/: conftest.py  test_aact_synonyms.py  test_association_otf.py  test_chembl_molecule.py  test_chemical_probes.py  test_clinical_report.py  test_disease_annotate_name_duplicates.py  test_disease_remap_edges.py  test_drug_molecule.py  test_embedding.py  test_evidence_postprocess.py  test_expression.py  test_gene_essentiality.py  test_homologues.py  test_homology.py  test_interaction.py  test_literature_cooccurrence_evidence.py  test_literature_entity_lut.py  test_literature_publication_match.py  test_openfda.py  test_reactome.py  test_release_metrics.py  test_safety_liability.py  test_search.py  test_search_ebi.py  test_search_facet.py  test_session.py  test_target.py  test_target_prioritisation.py  test_target_safety_event.py  test_target_tractability.py  test_target_view.py  test_transcript.py  test_vep_view.py
pts/tests/test_associations/: test_associations.py  test_compute_novelty.py  test_evidence.py
pts/tools/: install_dependencies_on_cluster.sh
(+245 files in other folders)
