[project]
name = "ot-croissant"
version = "0.1.0"
description = "Open Targets Croissant exporter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlcroissant>=1.0.17",
    "pyspark>=3.5.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ot_croissant"]

[project.scripts]
ot_croissant = "app:main"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.32.0",
    "mypy>=1.15.0",
    "pylance>=0.26.0",
    "pylint>=4.0.3",
    "ruff>=0.9.3",
]
