[project]
name = "croissant"
version = "26.6.0"
description = "Open Targets Pipeline Croissant exporter"
authors = [{ name = "Open Targets Core Team", email = "devs@opentargets.net" }]
readme = "README.md"
requires-python = ">=3.10,<3.14"

dependencies = [
  "loguru>=0.7.3",
  "mlcroissant>=1.0.17",
  "pydantic>=2.0",
  "pyspark>=3.5.7",
]

[dependency-groups]
dev = ["deptry>=0.25.1", "ruff>=0.15.17", "ty>=0.0.49"]
test = ["coverage>=7.14.1", "pytest>=9.0.3"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ot_croissant"]

[project.scripts]
ot_croissant = "app:main"


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
  "E",      # pycodestyle
  "F",      # pyflakes
  "N",      # pep8-naming
  "Q",      # flake8-quotes
  "RUF",    # ruff
  "UP",     # pyupgrade
  "D",      # pydocstyle
  "D212",   # multi-line docstring summary should start at the first line
  "S",      # flake8-bandit
  "C4",     # flake8-comprehensions
  "INT",    # flake8-gettext
  "LOG",    # flake8-logging
  "G",      # flake8-logging-format
  "I",      # isort
  "ICN001", # flake8-import-conventions
  "B",      # flake8-bugbear
  "A001",   # flake8-builtins
  "COM",    # flake8-commas
  "T10",    # flake8-debugger
  "T20",    # flake8-print
  "EXE",    # flake8-executable
  "ISC",    # flake8-implicit-str-concat
  "PIE",    # flake8-pie
  "PT",     # flake8-pytest-style
  "RSE",    # flake8-raise
  "RET504", # flake8-return
  "SIM",    # flake8-simplify
  "TID",    # flake8-tidy-imports
  "PGH",    # pygrep-hooks
  "PL",     # pylint
  "TRY",    # tryceratops
  "PERF",   # perflint
  "FURB",   # refurb
  "W",      # pycodestyle warnings
]

ignore = [
  "D105",    # magic methods don't need docstrings
  "D107",    # __init__ doesn't need a docstring
  "D213",    # we prefer D212
  "G004",    # f-strings in logging are fine
  "E226",    # allow omitting whitespace around arithmetic operators
  "E731",    # allow assigning lambdas
  "RUF012",  # mutable class vars are common
  "RUF015",  # not always more readable
  "S311",    # false positives on non-crypto random usage
  "S324",    # md5/sha1 used for non-security purposes
  "S404",    # triggers on all subprocess imports
  "S603",    # triggers on all subprocess calls
  "S607",    # we trust PATH
  "B904",    # too noisy
  "COM812",  # trailing commas conflict with formatter
  "PIE807",  # lambda: [] is clearer for defaults
  "PT011",   # very noisy
  "SIM102",  # nested ifs can be more readable
  "SIM105",  # try-except-pass is fine
  "SIM108",  # ternary not always more readable
  "PLR09",   # too-many-<whatever> is noisy
  "PLR2004", # magic value comparisons are fine
  "PLR6301", # no-self-use is too noisy
  "PLW2901", # reassigning loop vars is intentional
  "TRY002",  # noisy
  "TRY003",  # long exception messages are fine
  "TRY300",  # return-in-try is situational
  "TRY400",  # not all exceptions need logging
  "PERF203", # try-except in loop — false positives
  "FURB113", # less readable
  "UP047",   # TypeVar syntax requires Python 3.12+
]

extend-safe-fixes = [
  "RUF005",
  "C4",
  "UP008",
  "D200",
  "D400",
  "RSE102",
  "RET504",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"
docstring-quotes = "double"
avoid-escape = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "tuple"
parametrize-values-type = "list"
parametrize-values-row-type = "tuple"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "S108", "D"]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"
