[project]
name = "ot_croissant"
version = "26.9.0rc1"
description = "Open Targets Pipeline Croissant Exporter"
authors = [{ name = "Open Targets Core Team", email = "devs@opentargets.net" }]
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "Apache-2.0" }

dependencies = [
  "loguru>=0.7.3",
  "mlcroissant>=1.0.17",
  "pydantic>=2.0",
  "pyspark>=3.5.7",
]

[dependency-groups]
dev = ["ruff>=0.15.17", "ty>=0.0.55"]
test = ["pytest>=9.0.3"]

[project.scripts]
ot_croissant = "ot_croissant.app:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
extend = "../ruff.toml"
