[project]
name = "orchestration"
version = "26.9.0-dev"
description = "Open Targets Pipeline Orchestration"
authors = [{ name = "Open Targets Core Team", email = "devs@opentargets.net" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }

dependencies = [
  "apache-airflow-providers-google>=14.1.0",
  "apache-airflow[apache-beam,async,celery,google]>=2.10.5",
  "google>=3.0.0",
  "pandas>=2.1.4",
  "pyhocon>=0.3.61",
  "pyyaml>=6.0.2",
  "requests>=2.32.3",
  "psycopg2-binary>=2.9.10",
  "apache-airflow-providers-apache-beam>=6.0.3",
  "deepdiff>=8.4.2",
  "deepmerge>=2.0",
  "flask-limiter>=3.12",
  "pydantic>=2.12.5",
]

[dependency-groups]
dev = ["graphviz>=0.21", "ruff>=0.15.17", "ty>=0.0.55"]
test = ["pytest>=9.0.3", "pytest-asyncio>=1.4.0", "pytest-mock>=3.15.1"]

[project.scripts]
orchestration = "orchestration:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests", "src/orchestration"]
addopts = "--doctest-modules --cache-clear"
filterwarnings = "ignore::DeprecationWarning"

[tool.ruff]
extend = "../ruff.toml"
exclude = [
  "src/orchestration/assets/dataproc_pts_run.py", # this is the dataproc cluster entrypoint file
]

[tool.ty.src]
exclude = [
  "src/orchestration/assets/dataproc_pts_run.py", # this is the dataproc cluster entrypoint file
]
