[project]
name = "orchestration"
version = "26.9.0-dev"
description = "Open Targets Pipeline Orchestration"
authors = [{ name = "Open Targets Core Team", email = "devs@opentargets.net" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
dependencies = [
  "apache-airflow-providers-google>=22.2.0",
  "apache-airflow-providers-apache-beam>=6.2.3",
  "apache-airflow-providers-fab>=3.7.0",
  "apache-airflow[async,celery,google]>=3.2.2",
  "asyncpg>=0.31.0",
  "google>=3.0.0",
  "pandas>=3.0.3",
  "pyyaml>=6.0.3",
  "requests>=2.34.2",
  "psycopg2-binary>=2.9.12",
  "deepdiff>=9.1.0",
  "deepmerge>=2.1.0",
  "flask-limiter>=3,<4",
  "pydantic>=2.13.4",
]


[dependency-groups]
dev = ["graphviz>=0.21", "ruff>=0.15.20", "ty>=0.0.56"]
test = ["pytest>=9.1.1", "pytest-asyncio>=1.4.0", "pytest-mock>=3.15.1"]

[project.scripts]
orchestration = "orchestration:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests", "src/orchestration"]
addopts = "--doctest-modules --cache-clear"
filterwarnings = "ignore::DeprecationWarning"

[tool.ruff]
extend = "../ruff.toml"
exclude = [
  "src/orchestration/assets/dataproc_pts_run.py", # this is the dataproc cluster entrypoint file
]

[tool.ty.src]
exclude = [
  "src/orchestration/assets/dataproc_pts_run.py", # this is the dataproc cluster entrypoint file
]
