[project]
name = "PIS"
version = "26.9.0rc2"
description = "Open Targets Pipeline Input Stage"
authors = [{ name = "Open Targets Core Team", email = "devs@opentargets.net" }]
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }

dependencies = [
  "elasticsearch>=7.17.12",
  "jq>=1.11.0",
  "loguru>=0.7.3",
  "opentargets-otter>=26.6.2",
  "requests>=2.34.2",
  "urllib3>=2.7.0",
]

[dependency-groups]
dev = ["ruff>=0.15.17", "ty>=0.0.55"]
test = ["pytest>=9.0.3"]

[tool.uv]
override-dependencies = ["urllib3>=2.7.0"]

[project.scripts]
pis = "pis.core:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
extend = "../ruff.toml"
