[project]
name = "PTS"
version = "26.9.0-dev"
description = "Open Targets Pipeline Transformation Stage"
authors = [{ name = "Open Targets Core Team", email = "devs@opentargets.net" }]
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }

dependencies = [
  "loguru>=0.7.3",
  "opentargets-otter>=26.6.1",
  "pandas>=2.3.3",
  "polars>=1.41.2",
  "pyspark>=3.5.7",
  "openai>=2.41.1",
  "openpyxl>=3.1.5",
  "numpy>=2.4.4",
  "obonet>=1.3.0",
  "polars-hash>=0.5.6",
  "torch>=2.10.0",
  "ontoma>=2.5.1",
  "ot-literature",
  "transformers>=4.40.0,<5.0.0",
  "gcsfs>=2026.2.0",
  "pdfplumber>=0.11.9",
  "clinical-mining",
  "huggingface-hub>=0.32.4",
  "networkx>=3.6.1",
]

[dependency-groups]
dev = ["ruff>=0.15.17", "ty>=0.0.55"]
test = ["pytest>=9.0.3", "pytest-asyncio>=1.4.0", "pytest-mock>=3.15.1"]

[project.optional-dependencies]
baseline_expression = ["pandas<3", "scanpy>=1.10.0", "cellex"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
ot-literature = { git = "https://github.com/opentargets/ot-literature", tag = "0.1.0" }
clinical-mining = { git = "https://github.com/opentargets/clinical_mining", tag = "0.6.3" }
cellex = { git = "https://github.com/perslab/CELLEX", rev = "119c7ca" }

[project.scripts]
pts = "pts.core:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: mark a test as slow (deselect with '-m \"not slow\"')"]

[tool.ruff]
extend = "../ruff.toml"

# Fix spark functions being flagged as missing arguments
# https://github.com/astral-sh/ty/issues/2759
[[tool.ty.overrides]]
include = ["src/pts/pyspark/**/*.py", "tests/**/*.py"]
[tool.ty.overrides.rules]
missing-argument = "ignore"
invalid-argument-type = "ignore"
